<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/billion_icon"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@mipmap/stand" />
    <TextView
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="50px"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorClever"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        android:textStyle="bold"
        android:textColor="@color/colorClever"
        android:textSize="35dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/colorClever"
        android:text="@string/billionaire_affir"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:textSize="45dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@color/colorClever"
        android:text="@string/below_billionaire"/>

    <TextView
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/below_affirmations"
        android:textColor="@color/colorClever"
        android:textStyle="italic"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/below_develope"
        android:textColor="@color/colorClever"
        android:textStyle="italic"
        android:textSize="25dp"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="180dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@mipmap/billion_icon"
        android:clickable="true"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/get_started"
        android:textColor="@color/colorClever"
        android:textSize="25dp"
        android:textStyle="bold" />

</LinearLayout>

