<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/stand"
    tools:context=".first_hook_swipe">

    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_one"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_one2"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_one3"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_one4"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="25dp"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="59dp"
        android:text="@string/skip"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="@color/colorClever"
        android:layout_marginTop="400dp"
        android:layout_gravity="right"
        android:shadowColor="@color/colorPrimaryDark"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="btnnext"
        android:clickable="true"/>

</LinearLayout>