<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/envii"
    tools:context=".fourth_hook_swipe">

    <TextView
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_four"
        android:textColor="@color/colorClever"
        android:textStyle="bold"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_four2"
        android:textColor="@color/colorClever"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <TextView
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:text="@string/swipe_hook_four3"
        android:textColor="@color/colorClever"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <Button
        android:layout_width="120dp"
        android:layout_height="59dp"
        android:text="@string/skip"
        android:textStyle="bold"
        android:textSize="35dp"
        android:textColor="@color/colorClever"
        android:layout_marginTop="360dp"
        android:layout_gravity="right"
        android:shadowColor="@color/colorPrimaryDark"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="btnnext4"
        android:clickable="true"/>

</LinearLayout>